# stand-reminder

./: README.md  Untitled-1.js
.github/workflows/: build.yml
src/: alert.css  alert.html  alert.js  index.html  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/themes/aura/: aura.css  aura.js
src/themes/bloom/: bloom.css  bloom.js
src/themes/crystal/: crystal.css  crystal.js
src/themes/cyber/: cyber.css  cyber.js
src/themes/forest/: forest.css  forest.js
src/themes/night/: night.css  night.js
src/themes/pulse/: pulse.css  pulse.js
src/themes/swirl/: swirl.css  swirl.js
src/themes/warp/: warp.css  warp.js
src/themes/zen/: zen.css  zen.js
